--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node ./src/main.jsx",
+    "start": "node server.js",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed": "cp db/seeds.json db/db.json"
   },
   "dependencies": {
     "chart.js": "^4.2.1",
